#806930 by dixon_: Fixed Spacing and comment style issues.

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,8 +1,7 @@
 /* $Id$ */
 
-/**
- * Basic layout styles
- */
+/* ---------- Basic Layout Styles ----------- */
+
 #header div.section,
 #navigation div.section,
 #featured div.section,
@@ -10,7 +9,7 @@
 #main,
 #triptych,
 #footer-columns,
-#footer  {
+#footer {
   width: 960px;
   margin-left: auto;
   margin-right: auto;
